# AOC2019

./: .pre-commit-config.yaml  Cargo.toml  README.md  tasks.py
.github/workflows/: ci.yml
breakout/: Cargo.toml
breakout/src/: cli.rs  game.rs  lib.rs  view.rs
geometry/: Cargo.toml
geometry/examples/: pathfinding_island.txt  pathfinding_multi.txt
geometry/src/: coord2d.rs  coord3d.rs  lib.rs
geometry/src/coord2d/: graph.rs  map.rs  path.rs  pathfinder.rs
intcode/: Cargo.toml  fizzbuzz.intcode
intcode/src/: assembler.rs  cli.rs  cpu.rs  errors.rs  lib.rs  opcode.rs  program.rs
puzzles/14/: example_c.txt
searcher/: Cargo.toml
searcher/src/: algorithm.rs  errors.rs  graph.rs  lib.rs  traits.rs
searcher/src/algorithm/: astar.rs  basic.rs  cache.rs  dijkstra.rs  score.rs
searcher/src/graph/: edge.rs  path.rs  traits.rs
src/: cartesian.rs  iterhelper.rs  lib.rs  main.rs  searcher.rs
src/puzzles/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
src/puzzles/day17/: map.rs  movement.rs  path.rs
src/puzzles/day18/: map.rs  multi.rs  multigraph.rs  single.rs
templates/: dayn.rs
