[package]
name = "aoc2019"
version = "0.1.0"
authors = ["Alex Rudy <alex.rudy@bit.ly>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
lazy_static = "*"
thiserror = "*"
intcode = { path = "intcode" }
anyhow = "*"
permutohedron = "0.2.4"

[workspace]