[package]
name = "aoc2019"
version = "0.1.0"
authors = ["Alex Rudy <alex.rudy@bit.ly>"]
edition = "2018"
default-run = "aoc2019"

[[bin]]
name = "aoc2019"

[dependencies]
clap = "2.33"
lazy_static = "*"
thiserror = "*"
intcode = { path = "intcode" }
geometry = { path = "geometry" }
breakout = { path = "breakout" }
searcher = { path = "searcher" }
anyhow = "*"
permutohedron = "0.2.4"
paste = "*"
regex = "1"
num = "*"
ansi_term = "*"

[workspace]
members = [
    "breakout",
    "geometry",
    "intcode",
    "searcher",
]
