[package]
name = "breakout"
version = "0.1.0"
authors = ["Alex Rudy <alex.rudy@bit.ly>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "breakout"
path = "src/lib.rs"

[[bin]]
name = "breakout"
path = "src/cli.rs"


[dependencies]
thiserror = "*"
anyhow = "*"
clap = "*"
intcode = { path = "../intcode" }
geometry = { path = "../geometry" }
cursive = "*"
