[package]
name = "intcode"
version = "0.1.0"
authors = ["Alex Rudy <alex.rudy@bit.ly>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "intcode"
path = "src/lib.rs"

[[bin]]
name = "intcode"
path = "src/cli.rs"

[[bin]]
name = "intcode-asm"
path = "src/assembler.rs"


[dependencies]
thiserror = "*"
anyhow = "*"
clap = "*"
